# chem_app

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.streamlit  README.md  REFERENCE.md  SECURITY_SETUP.md  cli.py  conftest.py  demo_data.csv  docker-compose.yml  environment.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.bat  verify_molgen.py  verify_phase4.py  verify_reaction.py  verify_synth.py
.github/: DEVELOPMENT.md
.github/workflows/: lint.yml  test.yml
chem_ml_project/: chemai.code-workspace  settings.py  urls.py  wsgi.py
core/: api.py  cli.py  llm_api_endpoints.py  models.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/services/: api_client.py  cache.py  config.py  data_loader.py  data_versioning.py  db_connector.py  doc_generator.py  errors.py  feature_store.py  knowledge_graph.py  logging_config.py  mol_editor.py  notifications.py  plugin.py  profiler.py  qa.py  scheduler.py  security.py  simulation.py  task_handler.py  utils.py  validation.py  wizard.py  workflow.py
core/services/data/: __init__.py  molecule_database.py
core/services/features/: README.md  REPRODUCE_PROMPT.md  __init__.py  admet.py  advanced_selectors.py  applicability_domain.py  augmenter.py  base.py  bioinformatics.py  comp_chem.py  dataset_analyzer.py  descriptor_presets.py  descriptor_selector.py  equivariant_gnn.py  fingerprint.py  mmp.py  (+25 more)
core/templates/: 404.html  500.html  base.html  datasets.html  experiments.html  index.html  predict.html
core/tests/: test_all.py  test_api.py  test_api_new.py  test_automl_active_learning.py  test_batch_processing.py  test_chem_pipeline.py  test_cluster_extended.py  test_data_io.py  test_data_quality.py  test_dimensionality_reduction.py  test_feature_selector.py  test_features.py  test_impute_extended.py  test_metrics_calculator.py  test_mixture_solubility.py  test_ml.py  test_ml_pipeline.py  test_mlxtend_ensembles.py  test_mlxtend_sequential_fs.py  test_model_factory.py  test_model_persistence.py  test_naive_bayes.py  test_neural_network.py  test_pharmacophore.py  test_phase4.py  test_pipeline_builder.py  test_preprocessing_extended.py  test_security.py  test_smart_preprocessor.py  test_splitter.py  test_tarte.py  test_uma.py  test_validation.py  test_vis.py  test_weights.py  test_xgboost_extended.py
docs/: API_GUIDELINES.md  DATA_SCHEMA.md  PLUGIN_DEVELOPMENT.md
examples/: 01_simple_descriptors.py  02_basic_ml.py  03_api_usage.py  04_visualization.py  05_llm_assistant.py  06_llm_api.py  README.md
frontend_streamlit/: app.py  comparison.py  llm_assistant_ui.py
plugins/: README.md
plugins/example_plugin/: README.md  __init__.py  plugin.py
scripts/: download_weights.py  prepare_release.py
templates/: feature_extractor_template.py  ml_model_template.py  test_template.py
(+83 files in other folders)
