[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chem_ml_app"
version = "1.0.0"
description = "Machine Learning Platform for Molecular Property Prediction"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "jckkvs", email = "jckkvs@users.noreply.github.com"}
]
keywords = ["chemistry", "machine-learning", "rdkit", "molecular-descriptors"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=4.2",
    "django-ninja>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "rdkit>=2023.09",
    "umap-learn>=0.5",
    "streamlit>=1.30",
    "mlflow>=2.10",
    "shap>=0.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-django>=4.5",
    "pytest-cov>=4.1",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]
xtb = ["xtb-python"]
tarte = ["tarte-ai"]
full = ["xtb-python", "tarte-ai", "unimol-tools", "transformers", "torch"]

[project.urls]
Homepage = "https://github.com/jckkvs/chem_app"
Documentation = "https://github.com/jckkvs/chem_app/blob/main/README.md"
Repository = "https://github.com/jckkvs/chem_app"
Issues = "https://github.com/jckkvs/chem_app/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.venv
  | __pycache__
  | htmlcov
  | mlruns
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "chem_ml_project.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["core/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
addopts = [
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["core"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "sklearn.*",
    "xgboost.*",
    "lightgbm.*",
    "umap.*",
]
ignore_missing_imports = true
